# protobuf-json-mapping

./: Cargo.toml  buf.gen.yaml  buf.yaml
proto/test/: foo.proto
src/: lib.rs  parse.rs  print.rs
src/test/: foo.rs  mod.rs
