[package]

name = "protobuf-json-mapping"
version = "3.5.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
documentation = "https://github.com/stepancheg/rust-protobuf/blob/master/README.md"
description = """
JSON mapping for Protocol Buffers messages.
"""

[lib]
bench = false

[dependencies]
hex = "0.4.3"
lotus-proto = { git = "https://github.com/trylotus/rust-lotus-proto.git", tag = "v1.0.0" }
protobuf = "3.5.0"
protobuf-support = "3.5.0"
thiserror = "1.0.30"

[package.metadata.docs.rs]
all-features = true
